Attempted fix for @font-face issues on Safari.

--- a/public/fonts/stylesheet.css
+++ b/public/fonts/stylesheet.css
@@ -128,8 +128,8 @@
 /* Cubano */
 @font-face {
     font-family: 'Cubano';
-    src: url('Cubano.woff2') format('woff2'),
-        url('Cubano.woff2') format('woff');
+    src: url('/fonts/Cubano.woff2') format('woff2'),
+         url('/fonts/Cubano.woff2') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
