--- a/public/scss/_globals.scss
+++ b/public/scss/_globals.scss
@@ -65,9 +65,6 @@ button {
     padding: 0;
     margin-bottom: 20px;
 }
-h1, h2, h3, h4, h5, h6 {
-    font-weight: normal;
-}
 .h1, h1 {
     font-size: 2.5rem;
 }
